@@ -25,8 +25,8 @@ requires 'Text::UnicodeBox::Control' => 0;
 requires 'Unicode::Block' => 0.02;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Unicode-Block-Ascii';
-resources 'homepage' => 'https://github.com/tupinek/Unicode-Block-Ascii';
-resources 'repository' => 'git://github.com/tupinek/Unicode-Block-Ascii';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Unicode-Block-Ascii';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Unicode-Block-Ascii';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.06;
 test_requires 'Test::More' => 0;
