@@ -147,7 +147,7 @@ DEPENDENCIES
     Unicode::Block.
 
 REPOSITORY
-    <https://github.com/tupinek/Unicode-Block-Ascii>
+    <https://github.com/michal-josef-spacek/Unicode-Block-Ascii>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
