@@ -1,6 +1,7 @@
 0.04
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
  - Update copyright years.
 
 0.03 2018-02-07T07:49:53+01:00
